--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,29 @@
-.App {
+
+#flypjournal, .App, .FrontPageStream {
   text-align: center;
+  width : 320px;
+  position: relative;
+  height: 100%;
 }
+
+.App {
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+.FrontPageStream {
+	width: 10000px;
+	text-align: left;
+}
+
+
+.flyp-message {
+	display: inline-block;
+	position: relative;
+	width:320px;
+	height:100%;
+	background:#cccc33;
+	border: 2px solid #3333cc;
+}	
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -9,8 +32,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 40px;
   color: white;
 }
 
