--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 #FlypJournal, 
 #FlypJournal > *, 
 #FlypJournal .FrontPageStream {
-  text-align: left;
+	/* text-align: left; */
   width:100vw;
   position: relative;
   height: 100%;
@@ -18,7 +18,7 @@
 
 
 
-
+/*-----  Globale Styles für FrontPageStream------*/
 #FlypJournal .FrontPageStream > * {
 	display: inline-block;
 	position: relative;
@@ -29,7 +29,6 @@
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 }	
-
 #FlypJournal .FrontPageStream > div > .Message {
 	height: 100%;
 	width:100%;
@@ -38,7 +37,7 @@
 	height: 100%;
 	width:100%;
 }
-#FlypJournal .FrontPageStream > div > .Message > div > div.Image {
+#FlypJournal .FrontPageStream > div > .Message > div > div.FlypImage {
 	height: 100%;
 	width:100%;
 	position: absolute;
@@ -56,29 +55,29 @@
 
 
 
-/*-----  Article Stream ------*/
+/*-----  Globales css für den Article Stream ------*/
 #FlypJournal .ArticleStream {
 	min-height:100%;
 }
-#FlypJournal .ArticleStream > div > .Message > .paragraph,
-#FlypJournal .ArticleStream > div > .Message > .image {
+#FlypJournal .ArticleStream > div > .Message > .ArticleParagraphLayout,
+#FlypJournal .ArticleStream > div > .Message > .ArticleImageLayout {
 	padding: 0 5%;
 	box-sizing: border-box;
 }
 
-#FlypJournal .ArticleStream > div > .Message > .paragraph > h3 {
+#FlypJournal .ArticleStream > div > .Message > .ArticleParagraphLayout > h3 {
 	/*font-size: 2em;
 	font-weight:400;
 	text-transform: uppercase;*/
 }
 
 
-#FlypJournal .ArticleStream > div > .Message > div.image > div.Image {
+#FlypJournal .ArticleStream > div > .Message > div.ArticleImageLayout > div.FlypImage {
   overflow:hidden;
   height: 300px;
   width:100%;
 }
-#FlypJournal .ArticleStream > div > .Message > div.image > p {
+#FlypJournal .ArticleStream > div > .Message > div.ArticleImageLayout > p {
   text-align:right;
 }
 
@@ -89,7 +88,7 @@
 .Style1 {
 	background-color: #c80c41;
 }
-.Style1 .Image {}
+.Style1 .FlypImage {}
 .Style1 .Headline {
 	font-family: 'Josefin Slab', serif;
 	font-size: 3em;
@@ -127,7 +126,7 @@
 .Style2 {
 	background-color: #c80c41;
 }
-.Style2 .Image {}
+.Style2 .FlypImage {}
 .Style2 .Headline {
 	font-family: 'Barrio', cursive;
 	font-size: 3em;
