--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,11 @@ h1,h2,h3,h4,p {
 	margin-top: -2%;
 	margin-bottom: 3%;
 }
+#FlypJournal .ArticleStream > div > .Message > .SocialMessageLayout {
+		padding: 10%;
+		border: 2px solid gray;
 
+}
 
 
 
