--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html, body {height:100%; width:100vw;background-color:black}
+html, body {height:100vh; width:100vw;background-color:black}
 
 body {
   margin: 0;
