--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,11 @@ h1,h2,h3,h4,p {
 }
 
 #FlypJournal .FrontPageStream {
-	overflow-x: scroll;
+	overflow-x: hidden;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
 	height:100%;
+	position:absolute;
 }
 
 
