--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,11 @@ h1,h2,h3,h4,p {
 
 /*-----  Globale Styles für FrontPageLayout------*/
 #FlypJournal .FrontPageStream {
-	overflow-x: hidden;
+	overflow-x: scroll;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
 	height:100%;
-	position:absolute;
+  width: 100%;
 }
 
 #FlypJournal .FrontPageStream > .FrontPageStreamItems {
