--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,11 @@ h1,h2,h3,h4,p {
 }
 
 #FlypJournal .FrontPageStream {
-	overflow-x: hidden;
+	overflow-x: scroll;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
 	height:100%;
-	position:absolute;
+	width:100%;
 }
 
 
