minor layout changes

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ h1,h2,h3,h4,p {
 #FlypJournal .ArticleStream > div > .Message > .ArticleParagraphLayout > p {
 	line-height: 1.4em;
 }
-#FlypJournal .ArticleStream > div > .Message > .ArticleImageLayout > .FlypImage {
+#FlypJournal .ArticleStream > div > .Message > div > .FlypImage {
 	height: 40vh;
 	margin-bottom: 4%;
 	overflow:hidden;
