--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+/* elastic scroll */
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  -webkit-overflow-scrolling: auto;
 }
