--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
-html, body {height:100%; width:100vw;background-color:black}
+html, body {height:100%; width:100vw;background-color:black; overflow:hidden}
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-/* elastic scroll */
   height: 100%;
   width: 100%;
-  overflow: hidden;
-  -webkit-overflow-scrolling: auto;
 }
